# iosim-zurihac-2022

./: CHANGELOG.md  README.md  ZuriHac-IOSim.cabal  cabal.project
app/: Main.hs
slides/: CodeDemo.lhs  Makefile
slides/includes/: beamerthemewelltyped.sty  defaults.fmt  formats.fmt  syntax-prelude.fmt  typewriter.fmt  welltyped.fmt  welltypedcode.sty  welltypedcolors.sty  welltypedfonts.sty
src/: Demo.hs  MyLib.hs  Project.hs  ProjectSol.hs
test/: Main.hs  ProjectSolTest.hs
