cabal-version:      2.4
name:               ZuriHac-IOSim
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Armando Santos
maintainer:         armandoifsantos@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  MyLib
                      Demo
                      Project
                      ProjectSol

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      io-sim,
                      io-classes,
                      strict-stm,
                      contra-tracer
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
                      -fno-ignore-asserts

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  main-is:             Main.hs

  other-modules:       ProjectSolTest

  build-depends:       base,
                       ZuriHac-IOSim,
                       io-classes,
                       io-sim,
                       strict-stm,
                       contra-tracer,
                       QuickCheck,
                       tasty,
                       tasty-quickcheck

  ghc-options:         -Wall
                       -fno-ignore-asserts

executable ZuriHac-IOSim
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        ZuriHac-IOSim

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
                      -fno-ignore-asserts
